--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "projeto16-boardcamp",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +26,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "nodemon": "^2.0.20",
+    "pg": "^8.9.0",
     "uuid": "^9.0.0"
   }
 }
